--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "isomorphic-unfetch": "^3.0.0",
     "nodemon": "^1.18.4",
     "request": "^2.88.0"
   }
