--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apiai": "^4.0.3",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^3.0.0",
     "node-schedule": "^1.3.0",
