--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "node-schedule": "^1.3.0",
     "nodemon": "^1.18.4",
